--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,18 @@
 .read-the-docs {
   color: #888;
 }
+
+.tags {
+  display: flex;
+  gap: 10px;
+  margin: 0 auto;
+  width: 500px;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.tags > span {
+  background-color: #ffffff36;
+  border-radius: 3px;
+  padding: 2px 10px;
+}
