--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -1,6 +1,5 @@
 .container {
-  max-width: 1000px;
   margin: 0 auto;
-  padding: 20px;
-  border: 1px solid red;
+  padding: 10px;
+  flex-grow: 1;
 }
