--- a/src/index.css
+++ b/src/index.css
@@ -17,13 +17,18 @@
 
 #root {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  display: flex;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
