--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -1,5 +1,25 @@
 .container {
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  width: calc(100% - var(--nav-wide-width));
+  margin-left: auto;
   padding: 10px;
-  flex-grow: 1;
+}
+
+@media (max-width: 1870px) {
+  .container {
+    width: calc(100% - var(--nav-medium-width));
+  }
+}
+
+@media (max-width: 1264px) {
+  .container {
+    width: calc(100% - var(--nav-narrow-width));
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+  }
 }
