--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  
+
   color: rgba(255, 255, 255, 0.87);
 
   font-synthesis: none;
@@ -13,6 +13,11 @@
 
   --light-c-pri: #fff;
   --light-c-sec: #101010;
+
+  /* Navbar Width Sizes */
+  --nav-narrow-width: 72px;
+  --nav-medium-width: 244px;
+  --nav-wide-width: 335px;
 }
 
 #root {
