--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,18 +1,19 @@
 .input {
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #ffffff20;
   font-size: 1rem;
-  padding: 18px 15px;
-  width: calc(100% - 30px);
+  padding: 15px 10px;
+  width: 100%;
 }
 
 .input.light-mode {
   color: #101010;
+  border-bottom: 1px solid #00000020;
 }
 
 .input.dark-mode {
   color: #fff;
+  border-bottom: 1px solid #ffffff20;
 }
 
 .input:focus {
