--- a/src/components/Navbar/Navbar.Responsive.css
+++ b/src/components/Navbar/Navbar.Responsive.css
@@ -32,8 +32,12 @@
 
   .logo-narrow {
     margin: 40px 0px;
-    width: 29px;
-    height: 29px;
+    width: 23px;
+    height: 23px;
+  }
+
+  .logo-narrow img {
+    width: 100%;
   }
 }
 
@@ -42,6 +46,7 @@
     width: 100%;
     height: 48px;
     bottom: 0px;
+    z-index: 1;
   }
 
   .navbar-container.light-mode {
