--- a/src/components/TextEditor/TextEditor.css
+++ b/src/components/TextEditor/TextEditor.css
@@ -9,8 +9,8 @@
 }
 
 .ql-editor {
-  min-height: 300px;
-  max-height: 300px;
+  min-height: 300px!important;
+  max-height: 400px;
   overflow-y: scroll;
   font-size: 1rem;
 }
