--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,3 +1,9 @@
+.form-container{
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
 .form-container>span {
   color: rgb(216, 57, 57);
   font-size: 0.8rem;
@@ -11,7 +17,6 @@
   background-color: transparent;
   border: none;
   padding: 15px 10px;
-  width: 100%;
   border-radius: 2px;
   margin-top: 10px;
 }
@@ -33,7 +38,6 @@
 }
 
 .form-title {
-  width: 100%;
   font-weight: 500;
   text-align: center;
   padding-bottom: 20px;
