--- a/src/pages/Users/Me/MePage.css
+++ b/src/pages/Users/Me/MePage.css
@@ -5,100 +5,20 @@
   max-width: 750px;
 }
 
-.personal-info {
-  display: flex;
-  padding: 10px;
-  padding-top: 40px;
-  max-width: 600px;
-  gap: 40px;
-}
-
-/* .light-mode .personal-info {
-  border-bottom: 1px solid #00000070;
-}
-
-.dark-mode .personal-info {
-  border-bottom: 1px solid #ffffff70;
-} */
-
-.user-avatar {
-  width: 140px;
-  height: 140px;
-  aspect-ratio: 1/1;
-  border-radius: 50%;
-}
-
-.user-avatar>img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.user-data {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin: 40px 0px;
-}
-
-.user-data>p {
-  line-height: 1rem
-}
-
-.me-username {
-  margin-bottom: 10px;
-}
-
-.user-data .fullname,
-.me-username {
-  font-size: 1.3rem;
-  font-weight: 300;
-}
-
-.user-data .biography {
-  opacity: 0.8;
-}
-
-.user-data .contact>a:not(:first-child) {
-  margin-left: 10px;
-}
-
-/*AWARDS*/
-.personal-awards {
-  display: flex;
-  gap: 20px;
-}
-
-.award {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-
-.award>svg {
-  opacity: 0.6;
-}
-
-.award-info>p {
-  line-height: 1rem;
-}
-
-.award-label {
-  opacity: 0.6;
-}
-
-.award-value {
-  font-weight: 700;
-}
-
 /*POSTS*/
 
 .post-header {
-  border-bottom: 1px solid #00000020;
+  margin: 10px 10px;
+  border-radius: 6px;
+  padding: 5px 0px;
+}
+
+.light-mode .post-header {
+  background-color: #ffffff;
 }
 
 .dark-mode .post-header {
-  border-bottom: 1px solid #ffffff40;
+  background-color: #ffffff08;
 }
 
 .post-header>ul {
@@ -108,54 +28,21 @@
 
 .post-header-btn {
   background-color: transparent;
-  color: #00000070;
   font-size: 1rem;
   border: none;
   padding: 10px 10px;
   cursor: pointer;
+  color: inherit;
 }
 
-.dark-mode .post-header-btn {
-  color: #ffffff80;
+.post-header-btn.active {
+  font-weight: 600;
 }
 
-.post-header-btn.active {}
-
-.dark-mode .post-header-btn.active {
-  border-bottom: 1px solid #ffffff40;
-}
-
-.light-mode .post-header-btn.active {
-  border-bottom: 1px solid #00000020;
-}
-
-@media (max-width: 768px) {
-  .personal-info {
-    align-items: flex-start;
-    gap: 20px;
-    justify-content: center;
-  }
-
-  .user-avatar {
-    width: 75px;
-    height: 75px;
-  }
-
-  .user-data {
-    padding-left: 10px;
-  }
-
-  /* .personal-awards {
-    justify-content: center;
-  } */
-
-  .award>svg {
-    font-size: 30px;
-  }
-}
-
-@media (max-width: 400px) {
-  .award > svg{
-   display: none;
-  }
+.personal-posts {
+  padding: 0px 10px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 10px;
 }
