--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,7 +1,6 @@
 .form-container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   width: 100%;
 }
 
@@ -65,9 +64,10 @@
   background-color: #117be5;
   color: #fff;
   border: none;
-  border-radius: 4px;
+  border-radius: 6px;
   padding: 12px 26px;
-  font-weight: 600;
+  font-size: 1rem;
+  font-weight: 500;
   cursor: pointer;
   margin: 10px auto;
 }
@@ -84,7 +84,7 @@
   background-color: #c6c6c6;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .light-mode .form-container input {
     color: #101010;
     background-color: transparent;
@@ -94,4 +94,4 @@
     color: #fff;
     background-color: transparent;
   }
-}
+} */
