--- a/src/components/Posts/SmallView/PostSmallView.css
+++ b/src/components/Posts/SmallView/PostSmallView.css
@@ -1,41 +1,42 @@
 .post-small-view {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  position: relative;
+  flex-direction: column;
   border-radius: 6px;
   overflow: hidden;
-  flex-basis: 1;
-  padding: 10px;
+  cursor: pointer;
+  user-select: none;
 }
 
 .light-mode .post-small-view {
   background-color: #ffffff;
 }
 
+.light-mode .post-small-view:hover {
+  outline: 2px solid #00000007;
+}
+
 .dark-mode .post-small-view {
   background-color: #ffffff08;
 }
 
-.psv-title {
-  text-decoration: none;
-  color: inherit;
-  font-size: 1.4rem;
-  cursor: pointer;
-  font-weight: 400;
-  line-height: 1.4rem;
-  z-index: 0;
+.dark-mode .post-small-view:hover {
+  outline: 2px solid #ffffff20;
 }
 
 .psv-cover {
-  flex-basis: 1;
-  height: 100%;
+  display: flex;
+  flex-grow: 1;
   overflow: hidden;
+  max-height: 200px;
 }
 
-.psv-cover>img {
+.psv-cover img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
-  z-index: 0;
+}
+
+.psv-content {
+  flex-basis: 1;
+  flex-grow: 1;
+  padding: 10px;
 }
