--- a/src/components/Comment/CommentsView.css
+++ b/src/components/Comment/CommentsView.css
@@ -1,3 +1,19 @@
+.comments-header {
+  margin: 0px 10px;
+  padding: 10px 0px;
+  margin-bottom: 10px;
+}
+
+.light-mode .comments-header {
+  border-top: 1px solid #00000020;
+  border-bottom: 1px solid #00000020;
+}
+
+.dark-mode .comments-header {
+  border-top: 1px solid #ffffff20;
+  border-bottom: 1px solid #ffffff20;
+}
+
 .comments-list {
   list-style: none;
   margin: 0px 10px;
