--- a/src/components/Posts/SmallView/PostSmallView.css
+++ b/src/components/Posts/SmallView/PostSmallView.css
@@ -27,7 +27,7 @@
   display: flex;
   flex-grow: 1;
   overflow: hidden;
-  max-height: 200px;
+  max-height: 150px;
 }
 
 .psv-cover img {
@@ -39,4 +39,8 @@
   flex-basis: 1;
   flex-grow: 1;
   padding: 10px;
+}
+
+.psv-content h3 {
+  margin-bottom: 10px;
 }
