--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,7 @@ a:focus {
 
 h1 {
   font-size: 3rem;
+  line-height: 3rem;
 }
 
 h2 {
@@ -111,6 +112,16 @@ h2 {
 
 h3 {
   font-size: 2rem;
+  line-height: 2rem;
+}
+
+h4 {
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+}
+
+h5 {
+  font-size: 1rem;
 }
 
 /* Para navegadores basados en WebKit (Chrome, Safari) */
@@ -120,5 +131,5 @@ input:-webkit-autofill {
 
 /* Para navegadores basados en Gecko (Firefox) */
 input:-moz-autofill {
- background-color: red;
+  background-color: red;
 }
