--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,5 +1,8 @@
 .posts-container {
-  padding-bottom: 60px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 0px 10px;
 }
 
 .posts-container:first-child {
