--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,37 +1,59 @@
 .btn {
-  color: #fff;
   border: none;
-  border-radius: 4px;
-  padding: 12px 26px;
-  font-weight: 600;
+  border-radius: 8px;
+  padding: 12px;
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: inherit;
   cursor: pointer;
-  margin: 0 auto;
-  margin-top: 10px;
+  transition: all .2s;
 }
 
-.btn.primary {
-  background-color: #117be5;
+/* PRIMARY DARK */
+.dark-mode .btn.primary {
+  color: #fff;
+  background-color: #52525c;
+  border-top: 2px solid #73737b;
 }
 
-.btn.primary:hover {
-  background-color: #2386e9;
+.dark-mode .btn.primary:hover {
+  background-color: #4a4a52;
 }
 
-.btn.primary:focus {
-  background-color: #117be5;
+.dark-mode .btn.primary:focus {
+  background-color: #4c4c55;
 }
 
-.btn.secondary {
-  background-color: #d92c2c;
+/* PRIMARY LIGHT */
+.light-mode .btn.primary {
+  color: #fff;
+  background-color: #18171c;
 }
 
-.btn.secondary:hover {
-  background-color: #ef3737;
+.light-mode .btn.primary:hover {
+  background-color: #26232b;
 }
 
-.btn.secondary:focus {
-  background-color: #d92c2c;
+.light-mode .btn.primary:focus {
+  background-color: #111013;
 }
+
+/* SECONDARY DARK */
+.dark-mode .btn.secondary {
+  color: #fff;
+  border: 2px solid #3b3b3d;
+  background-color: transparent;
+}
+
+.dark-mode .btn.secondary:hover {
+  background-color: #1b1a1f;
+}
+
+.dark-mode .btn.secondary:focus {
+  background-color: #18171b;
+}
+
+/* SECONDARY LIGHT */
 
 .btn[disabled] {
   opacity: 0.5;
